# OFDM_cpp

./: CMakeLists.txt
include/: Channel.h  EncodeChannel.h  EncodeSrc.h  Eorror.h  Modulation.h  TRsignal.h  helper.h  ofdm.h  utils.h
include/ErrorCorrection/: feedForwardTrellis.h  hammingCode.h
src/: CMakeLists.txt  EncodeSrc.cpp  constellation.cpp  main.cpp
src/ErrorCorrection/: convolutionalCode.cpp  feedForwardTrellis.cpp  hammingCode.cpp  minHeap.cpp  viterbiCodec.cpp
src/algorithm/: Channel.cpp  EncodeChannel.cpp  EncodeSrc.cpp  Modulation.cpp  constellation.cpp  ofdm.cpp
src/util/: printfSignal.cpp
test/: CMakeLists.txt  feedforwardtrellis.sh
test/Transmit/: CMakeLists.txt  main.cpp
